# dee-kv

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  build.rs  compose.yaml  example-cluster.config.json
docs/: log-replication-plan.md
examples/cluster-configs/: dynamic-ip.config.json  static-ip.config.json
proto/: consensus.proto  health.proto  store.proto
src/: lib.rs  log.rs  main.rs  serde.rs  server.rs  store.rs  utils.rs
src/cluster/: config.rs  consensus.rs  consensus_apply.rs  health.rs  mod.rs
src/cluster/hearbeats/: health.rs
src/config/: mod.rs
src/log/: file.rs  mod.rs  writer.rs
src/services/: consensus.rs  health.rs  mod.rs  store.rs
