[package]
name = "dee-kv"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.4.0"
rand = "0.9.2"
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
# ron = "0.12"

[build-dependencies]
tonic-prost-build = "0.14.2"
